[gd_scene load_steps=4 format=3 uid="uid://bex4b5nguujlb"]

[ext_resource type="Script" path="res://scripts/dead_menu.gd" id="1_wgyoc"]
[ext_resource type="AudioStream" uid="uid://dct27sch0up8e" path="res://assets/songs/b423b42.wav" id="2_o5s2o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu7be"]
bg_color = Color(0.0807833, 0.0807834, 0.0807833, 0.45098)

[node name="dead_menu" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_direction = 1
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.998457
offset_bottom = 0.999878
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_wgyoc")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wu7be")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="BoxContainer2" type="BoxContainer" parent="PanelContainer/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 10
alignment = 1
vertical = true

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/BoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.815686, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "GAME OVER"
horizontal_alignment = 1

[node name="BtnPlayAgain" type="Button" parent="PanelContainer/MarginContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
action_mode = 0
text = "VOLVER A JUGAR"

[node name="BtnMenu" type="Button" parent="PanelContainer/MarginContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_font_sizes/font_size = 14
action_mode = 0
text = "SALIR"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_o5s2o")
autoplay = true

[connection signal="pressed" from="PanelContainer/MarginContainer/BoxContainer2/BtnPlayAgain" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/BoxContainer2/BtnMenu" to="." method="_on_button_2_pressed"]
